# takopi

./: changelog.md  pyproject.toml  readme.md  specification.md
.codex/: AGENTS.md
codex_telegram_bridge/: developing.md  pyproject.toml  readme.md
codex_telegram_bridge/src/codex_telegram_bridge/: exec_bridge.py  exec_render.py  telegram_client.py
codex_telegram_bridge/tests/: test_exec_bridge.py  test_exec_render.py
codex_telegram_bridge/tests/fixtures/: codex.jsonl
docs/: developing.md
src/takopi/: bridge.py  exec_bridge.py  logging.py
src/takopi/runners/: codex.py
src/takopi/telegram/: __init__.py  bridge.py  client.py  types.py
tests/: test_exec_runner.py  test_telegram_bridge.py  test_telegram_incoming.py  test_telegram_queue.py
